--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "files.associations": {
         "cstdlib": "cpp",
         "new": "cpp",
-        "ostream": "cpp"
-    }
+        "ostream": "cpp",
+        "string_view": "cpp"
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
